# sync-pointer

./: .clinerules  .env  .gitignore  .prettierrc.js  .prettierrc.mjs  README.md  README_zh.md  bunfig.toml  eslint.config.js  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: alpha.yml  dev.yml  release.yml  updater.yml
app/: layout.tsx
app/[locale]/: layout.tsx  page.tsx
app/i18n/: request.ts  routing.ts
app/locales/en-US/: home.json
app/locales/zh-CN/: home.json
app/store/: index.ts
app/store/preference/: index.ts
docs/: implementation-plan.md  tcp-mdns-implementation.md
src/: App.css  App.tsx  App.vue  auto-imports.d.ts  components.d.ts  main.ts  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: core.json  default.json  desktop.json  log.json  main.json  pinia.json  valtio.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en-US.yml  zh-CN.yml  zh.yml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: log.rs  mdns.rs  mod.rs  service.rs  sys.rs  util.rs
src-tauri/src/config/: log.rs  mod.rs  network.rs  system.rs  tracing_config.rs
src-tauri/src/constant/: mod.rs
src-tauri/src/core/: handle.rs  mod.rs  tray.rs
src-tauri/src/service/: codec.rs  mod.rs
src-tauri/src/service/client/: listener.rs  mdns.rs  mod.rs  tcp.rs
src-tauri/src/service/module/: connection.rs  protocol.rs
src-tauri/src/service/protocols/: base.rs  clipboard.rs  connection.rs  device.rs  input.rs  mod.rs  system.rs
src-tauri/src/service/server/: listener.rs  mdns.rs  mod.rs  session.rs  tcp.rs
src-tauri/src/service/session/: mod.rs
src-tauri/src/util/: mod.rs
src-tauri/windows/: hook.nsi
src-tauri/windows/languages/: English.nsh  English.nsi  SimpChinese.nsh
src/api/: log.ts  mdns.ts  service.ts  sys.ts  util.ts
src/assets/: tailwind.css
src/components/title-bar/: index.vue
src/i18n/: index.ts
src/i18n/locales/: en-US.json  en.json  zh-CN.json  zh.json
src/iconsets/: custom.ts
src/locales/: index.ts
src/locales/en-US/: default.json  setting.json
src/locales/zh-CN/: default.json  screen-layout.json
src/pages/ScreenLayout/: index.tsx
src/pages/ScreenLayout/components/: DeviceCell.tsx  DeviceGrid.tsx
src/pages/Settings/: index.tsx
src/pages/screen-layout/: index.tsx
src/pages/screen-layout/components/: DeviceCell.tsx  DeviceGrid.tsx
src/pages/settings/: index.tsx
src/pages/settings/components/: SettingsCard.tsx  SettingsForm.tsx
src/pages/settings/network-settings/: index.tsx
src/pages/settings/service-settings/: index.tsx
src/pages/settings/system-settings/: index.tsx
src/router/: index.ts
src/store/: index.ts
src/store/devices/: index.ts
src/store/preference/: index.ts
src/store/settings/: index.ts
src/store/settings/network/: index.ts
src/store/settings/system/: index.ts
src/styles/: index.css
src/utils/: color-util.ts
src/views/home/: index.vue
src/views/setting/: index.vue
