[package]
name = "sync-pointer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sync_pointer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "config-json5"] }
# tauri plugin 存储状态
tauri-plugin-valtio = "1"
# tauri plugin 开发工具
tauri-plugin-devtools = "2"
# 多线程相关
tokio = { version = "1" }
parking_lot = "0.12"
# 错误
anyhow = "1.0"
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 服务发现
mdns-sd = "0.13"
# 日志
log = "0.4"
# 本地化
rust-i18n = "3"
sys-locale = "0.3"
