[package]
name = "sync-pointer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sync_pointer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "config-json5", "devtools"] }
# tauri plugin 开发工具
tauri-plugin-devtools = "2"
# tauri plugin 单例
tauri-plugin-single-instance = "2"
# tauri plugin 持久化作用域
tauri-plugin-persisted-scope = "2"
# tauri plugin 本地存储
tauri-plugin-store = "2"
# tauri plugin 文件系统
tauri-plugin-fs = "2"
# tauri plugin 系统信息
tauri-plugin-os = "2"
# tauri plugin 对话框
tauri-plugin-dialog = "2"
# tauri plugin 打开外部应用或URL
tauri-plugin-opener = "2"
# tauri plugin 自动启动
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
# tauri plugin 窗口状态
tauri-plugin-window-state = "2"
# 多线程相关
tokio = { version = "1" }
parking_lot = "0.12"
# 错误
anyhow = "1.0"
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 服务发现
mdns-sd = "0.13"
# 日志
spdlog-rs = { version = "0.4.1", features= ["source-location"] }
# 本地化
rust-i18n = "3"
# 系统相关
sys-locale = "0.3"
hostname = "0.4.0"
local-ip-address = "0.6.3"
